http object fetch working